<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AllListingFragment">


    <TextView
        android:layout_width="247dp"
        android:layout_height="54dp"

        android:text="@string/all_listing"
        android:textSize="30dp"

        app:layout_constraintBottom_toTopOf="@+id/alllistingList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <ProgressBar
        android:id="@+id/loading_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="76dp"
        android:layout_height="76dp"
        app:layout_constraintBottom_toBottomOf="@+id/alllistingList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alllistingList" />

    <Button
        android:id="@+id/nextPage"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:text="@string/next_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alllistingList"
        app:layout_constraintVertical_bias="0.227" />

    <Button
        android:id="@+id/previousPage"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:text="@string/back_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alllistingList"
        app:layout_constraintVertical_bias="0.227" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/alllistingList"
        android:layout_width="409dp"
        android:layout_height="429dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>